# boku

./: .build.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  demotask.yml  hello.py  pyproject.toml  sample.yml  testtask.yaml
.github/workflows/: pages.yml
docs/: arguments.md  configuration.md  getting-started.md  helpers.md  taskfiles.md  tasks.md  variables.md
examples/: brew.yaml  daily.yaml  pylint.yaml  setup.yaml  system-health.yaml
hooks/: find_fix.sh  find_todo.sh
skills/: 01-quick-start.md  02-iteration-patterns.md  03-task-dependencies.md  04-variables-and-secrets.md  05-conditionals-and-helpers.md  06-why-boku.md  README.md
src/boku/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  helpers.py  logger.py  main.py  models.py  utils.py
src/boku/task/: __init__.py  executor.py  task.py
src/boku/taskfile/: __init__.py  taskfile.py
src/boku/variables/: __init__.py  parser.py
tests/: test_boku.py  test_helpers.py  test_task.py  test_variable_parser.py
web/: examples.html  examples.js  index.html  style.css
