[project]
name = "boku"
version = "0.2.0"
description = "Simple, sequential YAML task runner"
readme = "README.md"
authors = [{ name = "Paul Glushak", email = "paul@glushak.net" }]
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23.0",
  "packaging>=24.0",
  "picksy>=0.1.0",
  "pyyaml>=6.0.0",
]

[project.scripts]
boku = "boku:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.14.0",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.8.4",
]
