[project]
name = "boku"
version = "0.2.4"
description = "Simple, sequential YAML task runner"
readme = "README.md"
authors = [{ name = "Paul Glushak", email = "paul@glushak.net" }]
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.25.0",
  "packaging>=26.0",
  "picksy>=0.1.0",
  "pyyaml>=6.0.3",
]

[project.scripts]
boku = "boku.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.8.4",
  "ty>=0.0.1a5",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.basedpyright]
typeCheckingMode = "recommended"
reportUnusedCallResult = "none"

[tool.pycodestyle]
max-line-length = 120

[tool.ty.environment]
root = ["./src"]

[tool.ty.src]
respect-ignore-files = true

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "ignore"
possibly-missing-attribute = "error"
possibly-missing-import = "error"
unresolved-attribute = "warn"
